2007-12-31 Robert Schwebel <r.schwebel@pengutronix.de>

	* libxml2: set LIBXML2_ENV needed for a correct generation when the
	cross toolchain prefix and the target name differs. strip the lib on the
	target file system. Patch by Guillaume Gourat.

	* busybox: If busybox feature "BB_CONFIG_FEATURE_SUID" is
	set, the busybox binary must be installed on the target
	with the SUID bit set. There are several features which
	will turn on the SUID feature implicitly including: login,
	passwd, su, vlock, crond, crontab, ipcs, ipcrm.
	Patch by Randall Loomis.

	* xauth: added; patch by Claudio Leonel
	* haserl: added; patch by Tom St

2007-12-29 Robert Schwebel <r.schwebel@pengutronix.de>

	* net-snmp: refactored menu entries to use positive logic
	* fbgrab: added; patch by Roland Hostettler
	* net-snmp: added; patch by Randall Loomis

2007-12-28  Robert Schwebel <r.schwebel@pengutronix.de>

	* sudo: fixed URL
	* mad: fixed URL, moved packet to pengutronix server because
	upstream version has disappeared
	* pekwm: fixed URL (dito)
	* sqlite: version bump, old version was not available any more
	* unionfs: fixed URL
	* pdksh: fixed URL
	* flash: fixed URL

2007-12-27  Robert Schwebel <r.schwebel@pengutronix.de>

	* lighttpd: adds lighttpd to ptxdist. Lighttpd is another
	popular web server for embedded targets. Patch by Daniel
	Schnell. The configuration is dependant on fast cgi, pcre and
	openssl.

	* fcgi: integrates fastcgi 2.4.0 to be used e.g. by lighttpd.
	It doesn't contain any patches because it configures quite well
	under linux. Patch by Daniel Schnell.

2007-12-13  Robert Schwebel <r.schwebel@pengutronix.de>

	* pekwm: fix URL; patch by Marco Cavallini, inspired by
	BET-frogger[DO].

2007-12-09  Robert Schwebel <r.schwebel@pengutronix.de>

	* .in: remove leading whitespace; found by Marco Cavallini.

2007-10-27  Robert Schwebel <r.schwebel@pengutronix.de>

	* sudo: update to version 1.6.9p2. It patches some compile