@@ -246,7 +246,9 @@ source "rules/jvisu.in"
 endmenu
 
 menu "Test Suites                   "
+source "rules/calibrator.in"
 source "rules/cyclictest.in"
+source "rules/hackbench.in"
 source "rules/iperf.in"
 source "rules/host-pelts.in"
 source "rules/pelts_tests.in"
