@@ -1,0 +1,14 @@
+
+config HACKBENCH
+	bool
+	prompt "hackbench"
+	help
+	  The hackbench test is a benchmark for measuring the performance,
+	  overhead, and scalability of the Linux scheduler. Created by Rusty
+	  Russell, it uses client and server processes grouped to send and
+	  receive data in order to simulate the connections established for a
+	  chat room. Each client sends a message to each server in the group.
+
+	  See http://developer.osdl.org/craiger/hackbench/ for details.
+
+# vim: syntax=kconfig
